# ingestion-api-gcs

./: .gitignore  README.md  main.py  pyproject.toml
ingestion_api_gcs/: cred.py  ingestion.py  main.py  requirements.txt  secret.py  storage.py
terraform/: cloud-function.tf  cloud-sched.tf  provider.tf  secret-manager.tf  service-account.tf  storage-bucket.tf
